# backend-openhands

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  cookies.txt  main.py  pyproject.toml  requirements.txt  run_dev.py
alembic/: env.py
alembic/versions/: 2cd0b2246a0c_initial_database_setup.py  eff60fe2a0b7_authlib_upgrade_user_fs_identifier.py
backend/: __init__.py  model.py  worker.py
backendlearnify/: __init__.py  worker.py
backendlearnify/templates/: index.html
config/: dev.config  dev.configspec  flask-skeleton.init  gunicorn.py
debian/: changelog  control  install  postinst  rules
docs/: developing.md  endp_auth.md  endp_comms.md  endp_post.md  resources_api_docs.md
server/: __init__.py  extensiones.py  worker.py
server/controllers/: authentication.py  comment.py  community.py  health.py  post.py  resource.py
server/db/: chat.py  community.py  model.py  resource.py
server/routes/: auth.py  chat.py  community.py  health.py  post.py  resource.py
server/sockets/: events.py
server/templates/auth/: reset_email.html
server/utils/: auth_decorators.py
tests/: conftest.py
